# zendfi

./: .env  .env.example  .gitignore  Cargo.toml  README.md  reset.sh  reset_dev_db.sh  test.sh
.sqlx/: query-051e771175afaa5d5c5540fac4d2ed9ee0622ebac64f8701106cacbc585948c7.json  query-0b962d9bc68b22cb4be57d25666ab74633ce3737887e3d431e1f6a06ea304120.json  query-14b186c1369ff0a3b64c75a7d61ab0cbd138306cdd5a7d8af0e9a35e0c164d11.json  query-1788ec2ed98de1beaf51c9ec5fa7bc73c8de2a6a6880f2424868b56833218155.json  query-24e05ed018471bef0448f00e70b83aa047f8747850a6c0bdb3314585f80a9ddf.json  query-24faac55adc7685190977b4e841db2e0aded4bc95689f849eb2741be26d062f0.json  query-263123e3f0b5704b10c97a047df70d2797bf1f3fc31876751a0eb0517d2dec08.json  query-309e11b326e13e55078815a304cef65a86dfabd7f688b5671c551c8599f657df.json  query-3b6af1770b838b9b9e61891c437838035f1aac006f9f33e4f97ede5b95068e82.json  query-3bfb5175d1b647064bfc293d53131b46c205ed30b40100ccff479fbbd50ac11e.json  query-43d0bfad81ead0768f9995e9e6b2c9d41b2694027c697760bbaaf099b4041768.json  query-441612dae85eefab5df05214dd2a8647edc848beab55812a12583e3d672b7c38.json  query-44ea47a9ad48ccaf0c9086a0de5a36da9fdec1aff9c6793150998bf2488f0c74.json  query-4d89b21c6673c91a2fa32e9056c25ee6b2b4825e8fd25350909c00ae7c5d90f5.json  query-4d9b1cb0afcb2c8db383859499e5a31f84bc3fb7faa7440f245591b2dd8ea568.json  query-4f8ce5e2762816412be42b49d3b4437d2ee02a311af4d5b76bf52ac142bca679.json  query-504d2c644951388b989dc5e82733d370d24403db64c31f559bc298507099fe92.json  query-50c19641f30670cdfbdb8d2e1442db685ce7252bfcb0e264f5cfa0eb6e0fa299.json  query-519b6330aef2f41abb3d567f64624fce85c7c44aa730f5ff332f9a735cd7e111.json  query-52dbe1579301a1d070cf3d2c31d5954a84d4dfb38c795c7f940e7f032a9c04e2.json  query-560ece9348379ca4d3799f7a7e142e73648da209d3df59bf0934752db72786e2.json  query-56158589d8ee18238b5ef01c7740619cedfa525d2b6c687f44f5efb752a6bf08.json  query-5e50c47bef698ff0f045fac5fb1ee8f1405a7d0b40dd8fe4a0cb61a3b39c049e.json  query-5e7adc70f66ff42d521fc057de8bb7f9f2fa391c545d056c86bc4cb6b21e76c8.json  query-605a3b922f81b8c8aa447c13f76c9baaeee04a6d733a60382d1836cbc95e50be.json  (+56 more)
migrations/: 001_initial.sql  002_webhooks.sql  (+19 more)
(+18 files in other folders)
