[package]
name = "zendfi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
subtle = "2.4"
bs58 = "0.4"
rand = "0.8"
base64 = "0.22.1"
url = "2.5.7"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
aes-gcm = "0.10"
zeroize = "1.6"
argon2 = "0.5"
#solana-sdk = "3.0.0"
#spl-token = "8.0.0"
#solana-client = "3.0.3"
#spl-associated-token-account = "7.0.0"
#spl-memo = "6.0.0"

solana-client = "2.0"
solana-sdk = "2.0"  
spl-token = "6.0"
spl-associated-token-account = "4.0"
